update config; fix code margin

--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -2,6 +2,6 @@
 	<div class="footer-blog-title">
 		<p>&copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 		<p>Glad to meet you here!<br /></p>
-		<p>If you like the theme, go get it! <a href="https://github.com/troywith77/rZen">Install !</a></p>
+		<p>If you like the theme, go get it! <a href="https://github.com/troywith77/zenT">Install !</a></p>
 	</div>
 </footer>
