--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -72,10 +72,11 @@
   p
     margin: 1em 0
   img, video
-    max-width: 100%
+    max-width: 60%
     height: auto
     display: block
     margin: auto
+    border-radius: 3px
   a[title*="Flickr"] img
     height: auto!important
   h1, h2, h3, h4, h5, h6
@@ -195,7 +196,7 @@
   font-size: 85%
   color: color-footer
   line-height: 1.5
-  margin-bottom: 1.5em
+  margin-bottom: 6.5em
   a
     color: color-footer
     &:hover
