--- a/source/css/_bass/syntax.styl
+++ b/source/css/_bass/syntax.styl
@@ -80,6 +80,10 @@ figure.highlight
     border-left 1px solid #fff
     color #666
 
+  .line
+    margin: 2px 0;
+    display: inline-block;
+
 pre
   // Theme: Solarized - Light
   // More theme here: http://softwaremaniacs.org/media/soft/highlight/test.html
