--- a/source/css/_bass/variables.styl
+++ b/source/css/_bass/variables.styl
@@ -17,5 +17,5 @@ font-mono = "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace
 font-icon = FontAwesome
 font-icon-path = "fonts/fontawesome-webfont"
 font-icon-version = "4.0.3"
-font-size = 100%
+font-size = 14px
 line-height = 2em
