--- a/source/css/_partial/duoshuo.styl
+++ b/source/css/_partial/duoshuo.styl
@@ -28,3 +28,19 @@
 #ds-thread #ds-reset li.ds-tab a {
 	border-radius: 2px !important;
 }
+
+#ds-reset .ds-avatar img {
+	box-shadow: none !important;
+}
+
+#ds-thread #ds-reset .ds-toolbar-button {
+	opacity: .4 !important;
+}
+
+#ds-thread #ds-reset .ds-login-buttons .ds-more-services {
+	color: #33a6b8 !important
+}
+
+#ds-thread #ds-reset .ds-post-button {
+	color: #777 !important;
+}
