--- a/source/css/_partial/rwd.styl
+++ b/source/css/_partial/rwd.styl
@@ -28,6 +28,9 @@
 
 // Mobile
 @media (max-width:767px)
+  #bg
+    display: none
+
   #container
     width: 85%
     word-wrap: break-word
@@ -58,10 +61,9 @@
         a
           display: block
           border: none
-          padding: 1em .5em
           color: #fff
           border-bottom: 1px solid #677174
-          text-align: left
+          text-align: center
 
   #search-form-wrap
     display: none
