fix border in archive

--- a/source/css/_partial/archive.styl
+++ b/source/css/_partial/archive.styl
@@ -1,7 +1,10 @@
 .archive
   & .post
+    margin-top: 3em
     margin-bottom: 0
     border-bottom: none;
+    &:after
+      height: 0
 
   & .entry-content h1
     font-size: 170%;
