--- a/source/css/_partial/duoshuo.styl
+++ b/source/css/_partial/duoshuo.styl
@@ -26,7 +26,7 @@
 }
 
 #ds-thread #ds-reset li.ds-tab a {
-	border-radius: 2px !important;
+	border-radius: 0 !important;
 }
 
 #ds-reset .ds-avatar img {
@@ -43,4 +43,19 @@
 
 #ds-thread #ds-reset .ds-post-button {
 	color: #777 !important;
+}
+
+#ds-reset .ds-service-link {
+	background: none !important;
+	padding-left: 0 !important;
+	color: #33a6b8 !important;
+}
+
+#ds-reset .ds-service-link:hover {
+	color: #55c8da !important;
+}
+
+#ds-thread #ds-reset .ds-login-buttons .ds-service-list li {
+	width: 40px !important;
+	text-align: center;
 }
