--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -1,5 +1,5 @@
 #header
-  display: block
+  display: none
   margin: 2em 0 4em
   position: relative
   *zoom: 1
@@ -59,8 +59,8 @@
       clear: both
       content: "."
   li
-    width: 18%
     min-height: 60px
+    min-width: 100px
     line-height: 60px
     text-align: center
     &:hover
