--- a/source/css/_partial/rwd.styl
+++ b/source/css/_partial/rwd.styl
@@ -72,7 +72,8 @@
     display: none !important
 
   #header
-    margin: 2em 0 4em 0
+    display: block
+    margin: 2em 0 2em 0
     text-align: center
     position: static
 
