--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -1,7 +1,9 @@
 <%- partial('_partial/head') %>
 <body style="height: 100%">
-  <div id="bg" style="height: 300px; background: url('http://7xjr92.com1.z0.glb.clouddn.com/bg/mountain.jpeg');
-  background-position: center"></div>
+  <div id="bg">
+    <h1>Troy's Blog</h1>
+    <p>思想，故事和灵感</p>
+  </div>
   <nav class="nav">
     <ul>
       <% for (var i in theme.menu){ %><li><a href="<%- theme.menu[i] %>"><%= i %></a></li><% } %>
