--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -1,3 +1,18 @@
+#bg
+  display: flex
+  flex-direction: column
+  justify-content: center
+  align-items: center
+  height: 300px
+  letter-spacing: 0.4em
+  background: url('http://7xjr92.com1.z0.glb.clouddn.com/bg/mountain.jpeg')
+  background-position: center
+  color: #fff
+  h1
+    color: #fff
+    font-size: 3em
+    margin-bottom: 0.2em
+
 #container
   width: 750px
   margin-left: auto
@@ -7,6 +22,7 @@
   //padding-left: 200px
 
 .post
+  margin-top: 5em
   margin-bottom: 5em
   position: relative
   border-bottom: 1px solid #fff;
