--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -3,10 +3,11 @@
   flex-direction: column
   justify-content: center
   align-items: center
-  height: 300px
+  height: 400px
   letter-spacing: 0.4em
   background: url('http://7xjr92.com1.z0.glb.clouddn.com/bg/mountain.jpeg')
-  background-position: center
+  // background-position: center
+  background-attachment: fixed
   color: #fff
   h1
     color: #fff
