--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -1,8 +1,10 @@
 <%- partial('_partial/head') %>
-<body style="height: 100%">
+<body>
   <div id="bg">
-    <h1>Troy's Blog</h1>
-    <p>思想，故事和灵感</p>
+    <div id="bg-mask">
+      <h1>Troy's Blog</h1>
+      <p>思想，故事和灵感</p>
+    </div>
   </div>
   <nav class="nav">
     <ul>
