--- a/source/css/_bass/bass.styl
+++ b/source/css/_bass/bass.styl
@@ -13,7 +13,9 @@ em
 
 code
   text-shadow: 0 1px #fff
-  padding: 0 0.3em
+  background: #f7f7f7
+  border-radius: 3px
+  padding: 0 0.4em
 
 del
   text-decoration: line-through
