--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -39,4 +39,4 @@ body
 @import "_partial/archive"
 @import "_partial/footer"
 @import "_partial/rwd"
-@import "_partial/duoshuo"
+@import "_partial/toc"
