--- a/source/css/_partial/archive.styl
+++ b/source/css/_partial/archive.styl
@@ -1,13 +1,17 @@
 .archive
+  margin-top: 3em
   & .post
-    margin-top: 3em
+    margin-top: 1em
     margin-bottom: 0
     border-bottom: none;
     &:after
       height: 0
 
+  & .entry-content
+    margin-bottom: 1em
   & .entry-content h1
-    font-size: 170%;
+    font-size: 140%;
+    margin: 0
 
 #page-nav
   text-align: center
