--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -1,18 +1,27 @@
 #bg
-  display: flex
-  flex-direction: column
-  justify-content: center
-  align-items: center
+  position: relative
   height: 400px
+  height: 100vh
   letter-spacing: 0.4em
-  background: url('http://7xjr92.com1.z0.glb.clouddn.com/bg/mountain.jpeg')
+  background: url('/blog/images/background-1.jpg')
   // background-position: center
   background-attachment: fixed
+  background-size: cover
   color: #fff
+  #bg-mask
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    background: rgba(0, 0, 0, 0.2)
+    width: 100%;
+    height: 100%;
   h1
     color: #fff
-    font-size: 3em
-    margin-bottom: 0.2em
+    font-size: 3.5em
+    margin-bottom: 0.4em
+  p
+    font-size: 1.2em
 
 #container
   width: 750px
@@ -23,7 +32,7 @@
   //padding-left: 200px
 
 .post
-  margin-top: 5em
+  margin-top: 2em
   margin-bottom: 5em
   position: relative
   border-bottom: 1px solid #fff;
