--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -35,7 +35,7 @@
     display: inline-block
     width: 18px
     height: 17px
-    background: url('/images/icon-reorder@2x.png') no-repeat 0 0
+    background: url('/blog/images/icon-reorder@2x.png') no-repeat 0 0
     background-size: 18px 17px
 
 .nav
@@ -43,7 +43,9 @@
   font-size: 85%
   text-transform: uppercase
   background: #000
-  position: relative
+  position: sticky
+  top: 0
+  z-index: 3
   ul
     display: flex
     justify-content: center
@@ -63,6 +65,7 @@
     min-width: 100px
     line-height: 60px
     text-align: center
+    transition: background .5s
     &:hover
       background: #3ab795
 
